# hanzi-xiangqin

./: .gitignore  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
data/: hanzi.txt  hanzi_trad.txt
docker/: Dockerfile.worker  api.Dockerfile  ui.Dockerfile
hanzi_ceshi/: __main__.py  data_types.py  tester.py
hanzi_xiangqin/: __init__.py  __main__.py  cli.py  config.py  data_types.py  db.py  logger.py  tester.py  worker.py
hanzi_xiangqin/api/: app.py  dependencies.py
hanzi_xiangqin/api/routes/: __init__.py  health.py  schemas.py  tests.py
hanzi_xiangqin/db/: __init__.py  channel.py  data_types.py  setup.py
hanzi_xiangqin/testers/: __init__.py  simple.py  tester.py
hanzi_xiangqin/worker/: __init__.py  worker.py
ui/: .env  package-lock.json  package.json
ui/app/: fonts.tsx  layout.tsx  manifest.json  page.tsx
ui/app/components/: backdrop.tsx  bin.tsx  card.tsx  footer.tsx  header.tsx  menu.tsx  testbed.tsx
ui/app/error/: page.tsx
ui/app/test/[id]/: page.tsx
ui/app/test/[id]/results/: page.tsx
ui/app/tools/: client.ts  misc.ts
ui/app/types/: character.ts
