[project]
name = "hanzi-xiangqin"
version = "0.1.0"
description = "Chinese character test app backend service and CLI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "pydantic-settings>=2.8.1",
  "pydantic>=2.10.6,<3",
  "redis>=5.2.1",
  "orjson>=3.10.15",
]

[project.scripts]
hanzi_xiangqin = "hanzi_xiangqin:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
api = ["fastapi>=0.115.9", "uvicorn>=0.34.0"]
worker = ["scipy>=1.15.2"]
dev = ["mypy>=1.15.0", "ruff>=0.9.7", "types-redis>=4.6.0.20241004"]

[[tool.mypy.overrides]]
module = ["orjson.*"]
ignore_missing_imports = true
